# enterprise-okta-sso-platform

./: PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements.txt
src/: iam_architect.py  main.py  okta_client.py
tests/: test_okta_client.py
