[project]
name = "iam-okta-solution-architect"
version = "0.1.0"
description = "Python demo project showing IAM and Okta solution architecture capabilities"
authors = ["IAM Okta Expert <iam-okta@example.com>"]
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
requests = "^2.31.0"
authlib = "^1.2.0"
pytest = {version = "^8.0.0", optional = true}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
